[package]
authors.workspace = true
categories.workspace = true
description = "rsql formatters to output rsql results in various formats"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_formatters"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_colours = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true }
csv = { workspace = true, optional = true }
indexmap = { workspace = true, features = ["serde"] }
indoc = { workspace = true }
num-format = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"], optional = true }
rsql_drivers = { path = "../rsql_drivers", version = "0.15.4" }
rust-i18n = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"], optional = true }
serde_yaml = { workspace = true, optional = true }
supports-color = { workspace = true }
syntect = { workspace = true }
tabled = { workspace = true, features = ["ansi"], optional = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
tokio = { workspace = true }

[features]
all = [
    "ascii",
    "csv",
    "expanded",
    "html",
    "json",
    "jsonl",
    "markdown",
    "plain",
    "psql",
    "sqlite",
    "tsv",
    "unicode",
    "xml",
    "yaml"
]
default = []
ascii = ["dep:tabled"]
csv = ["dep:csv"]
expanded = ["dep:tabled"]
html = ["dep:quick-xml"]
json = ["dep:serde_json"]
jsonl = ["dep:serde_json"]
markdown = ["dep:tabled"]
plain = ["dep:tabled"]
psql = ["dep:tabled"]
sqlite = ["dep:csv"]
tsv = ["dep:csv"]
unicode = ["dep:tabled"]
xml = ["dep:quick-xml"]
yaml = ["dep:serde_yaml"]
