[package]
authors.workspace = true
categories.workspace = true
description = "rsql brotli driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_brotli"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
brotli = { workspace = true }
file_type = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.18.4" }
tempfile = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rsql_driver_csv = { path = "../csv", version = "0.18.4" }
rsql_driver_test_utils = { path = "../test_utils", version = "0.18.4" }
tokio = { workspace = true, features = ["macros", "rt"] }
