[package]
authors.workspace = true
categories.workspace = true
description = "rsql bzip2 driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_bzip2"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
bzip2 = { workspace = true, features = ["libbz2-rs-sys"] }
file_type = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.18.2" }
tempfile = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rsql_driver_csv = { path = "../csv", version = "0.18.2" }
rsql_driver_test_utils = { path = "../test_utils", version = "0.18.2" }
tokio = { workspace = true, features = ["macros", "rt"] }
