[package]
authors.workspace = true
categories.workspace = true
description = "rsql clickhouse driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_clickhouse"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
clickhouse = { workspace = true }
file_type = { workspace = true }
jiff = { workspace = true, features = ["serde"] }
rsql_driver = { path = "../../rsql_driver", version = "0.19.2" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["clickhouse"] }
tokio = { workspace = true, features = ["macros", "rt"] }
