[package]
authors.workspace = true
categories.workspace = true
description = "rsql cockroachdb driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_cockroachdb"
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
file_type = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.15.4" }
rsql_driver_postgresql = { path = "../../drivers/postgresql", version = "0.15.4" }
