[package]
authors.workspace = true
categories.workspace = true
description = "rsql cockroachdb driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_cockroachdb"
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
file_type = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.16.0" }
rsql_driver_postgresql = { path = "../../drivers/postgresql", version = "0.16.0" }

[dev-dependencies]
anyhow = { workspace = true }
rsql_drivers = { path = "../../rsql_drivers", version = "0.16.0" }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["cockroach_db"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = ["native-tls"]
native-tls = ["rsql_driver_postgresql/native-tls"]
rustls = ["rsql_driver_postgresql/rustls"]
