[package]
authors.workspace = true
categories.workspace = true
description = "rsql csv driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_csv"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
file_type = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.18.0" }
rsql_driver_delimited = { path = "../delimited", version = "0.18.0" }
url = { workspace = true }

[dev-dependencies]
rsql_driver_test_utils = { path = "../test_utils", version = "0.18.0" }
tokio = { workspace = true, features = ["macros", "rt"] }
