[package]
authors.workspace = true
categories.workspace = true
description = "rsql csv driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_csv"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
file_type = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.19.1" }
rsql_driver_delimited = { path = "../delimited", version = "0.19.1" }
url = { workspace = true }

[dev-dependencies]
rsql_driver_test_utils = { path = "../test_utils", version = "0.19.1" }
tokio = { workspace = true, features = ["macros", "rt"] }
