[package]
authors.workspace = true
categories.workspace = true
description = "rsql duckdb driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_duckdb"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
duckdb = { workspace = true, features = ["bundled"] }
file_type = { workspace = true }
indoc = { workspace = true }
jiff = { workspace = true }
regex = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.17.3" }
sqlparser = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rsql_driver_test_utils = { path = "../../drivers/test_utils", version = "0.17.3" }
tokio = { workspace = true, features = ["macros", "rt"] }
