[package]
authors.workspace = true
categories.workspace = true
description = "rsql excel driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_excel"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
calamine = { workspace = true }
file_type = { workspace = true }
indexmap = { workspace = true }
polars = { workspace = true, features = ["json", "lazy"] }
polars-sql = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.17.3" }
rsql_driver_polars = { path = "../../drivers/polars", version = "0.17.3" }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["fs"] }
url = { workspace = true }

[dev-dependencies]
rsql_driver_test_utils = { path = "../../drivers/test_utils", version = "0.17.3" }
tokio = { workspace = true, features = ["macros", "rt"] }
