[package]
authors.workspace = true
categories.workspace = true
description = "rsql fixed width format driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_fwf"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
file_type = { workspace = true }
polars = { workspace = true, features = ["json", "lazy"] }
polars-sql = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.17.3" }
rsql_driver_polars = { path = "../../drivers/polars", version = "0.17.3" }
tokio = { workspace = true, features = ["fs"] }
url = { workspace = true }

[dev-dependencies]
rsql_driver_test_utils = { path = "../../drivers/test_utils", version = "0.17.3" }
tokio = { workspace = true, features = ["macros", "rt"] }

