[package]
authors.workspace = true
categories.workspace = true
description = "rsql gzip driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_gzip"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
file_type = { workspace = true }
flate2 = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.19.1" }
tempfile = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rsql_driver_csv = { path = "../csv", version = "0.19.1" }
rsql_driver_test_utils = { path = "../test_utils", version = "0.19.1" }
tokio = { workspace = true, features = ["macros", "rt"] }
