[package]
authors.workspace = true
categories.workspace = true
description = "rsql http driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_http"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
file_type = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.18.4" }
rsql_driver_https = { path = "../https", version = "0.18.4" }

[dev-dependencies]
rsql_driver_csv = { path = "../csv", version = "0.18.4" }
tokio = { workspace = true, features = ["macros", "rt"] }
