[package]
authors.workspace = true
categories.workspace = true
description = "rsql libsql driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver_libsql"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
file_type = { workspace = true }
indoc = { workspace = true }
libsql = { workspace = true }
rsql_driver = { path = "../../rsql_driver", version = "0.17.3" }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
